zta/microservice4/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zta-microservice4
spec:
  selector:
    app: zta-microservice4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  type: ClusterIP
