zta/microservice4/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: zta-microservice4
spec:
  selector:
    matchLabels:
      app: zta-microservice4
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/zta-microservice5"
        ]
